Fixing Home's description bug on Mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ html {
     font-size: 2.8rem !important;
     margin-bottom: 0rem !important; }
   .home_description {
-    font-size: 2.8rem !important; }
+    font-size: 2.2rem !important; }
   .home_btn {
     width: 13rem !important;
     padding: 1rem 0.5rem !important; }
