--- a/sass/base/_mediaQueries.scss
+++ b/sass/base/_mediaQueries.scss
@@ -237,7 +237,7 @@
     }
 
     &_description {
-      font-size: 2.8rem !important;
+      font-size: 2.2rem !important;
     }
 
     &_btn {
